--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+:root {
+    --color-bg: #ffffff;
+  }
+  
+  html.dark {
+    --color-bg: #1a202c;
+  }
+  
+  body {
+    background-color: var(--color-bg);
+    transition: background-color 0.3s;
+  }
