--- a/src/body/css.css
+++ b/src/body/css.css
@@ -22,4 +22,23 @@ body, html {
     padding: 0;
     width: 100%;
     overflow-x: hidden; /* Evita que el contenido desborde horizontalmente */
-  }
+}
+
+.full{
+    width: 100%;
+    height: 670px;
+}
+
+.img_light{
+    width: 100%;
+    background-image:url("./../../public/img/d4pci99-e6fcca49-048a-4b42-a951-e246eecc9062.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.img_darck{
+    width: 100%;
+    background-image:url("./../../public/img/d4pci99-e6fcca49-048a-4b42-a951-e246eecc9062_darck.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
