--- a/src/body/Carousel.css
+++ b/src/body/Carousel.css
@@ -40,11 +40,12 @@
 
 .carousel-item img {
   width: 100%;
-  height: 250px;
+  height: 230px;
   border-radius: 8px;
 }
 
 .carousel-text {
+  width: 100%;
   text-align: center;
   margin-top: 10px;
 }
@@ -58,6 +59,21 @@
 
 .carousel-button:disabled {
   cursor: not-allowed;
+}
+
+.limit{
+  overflow: hidden;           /* Ocultar el texto que desborda */
+  text-overflow: ellipsis;    /* Agregar puntos suspensivos (...) al final */
+  max-width: 90%;            /* Ajustar al ancho del contenedor */
+  display: block;
+}
+
+.limit_h{
+
+  overflow: hidden;           /* Ocultar el texto que desborda */    
+  text-overflow: ellipsis;    /* Agregar puntos suspensivos (...) al final */
+  max-width: 90%;            /* Ajustar al ancho del contenedor */
+  display: block;             /* Asegurarse de que sea un bloque */
 }
 
 
