--- a/src/body/css.css
+++ b/src/body/css.css
@@ -26,19 +26,20 @@ body, html {
 
 .full{
     width: 100%;
-    height: 670px;
+    height: 100%;
 }
 
-.img_light{
+.full_w{
     width: 100%;
-    background-image:url("./../../public/img/d4pci99-e6fcca49-048a-4b42-a951-e246eecc9062.png");
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 
-.img_darck{
-    width: 100%;
-    background-image:url("./../../public/img/d4pci99-e6fcca49-048a-4b42-a951-e246eecc9062_darck.png");
-    background-repeat: no-repeat;
-    background-size: cover;
+.background{
+    background-image: url("./../../public/img/animal-paw-prints-simple-seamless-pattern-on-white-background-vector-Photoroom.png");
+    background-repeat: no-repeat; 
+    background-size: 100% 100%; 
+    background-position: center;
+}
+
+.dark_bg{
+    background-color: #333333;
 }
