--- a/Frontend/src/components/body/css.css
+++ b/Frontend/src/components/body/css.css
@@ -34,7 +34,7 @@ body, html {
 }
 
 .background{
-    background-image: url("./../../public/img/animal-paw-prints-simple-seamless-pattern-on-white-background-vector-Photoroom.png");
+    background-image: url("./../../../public/img/animal-paw-prints-simple-seamless-pattern-on-white-background-vector-Photoroom.png");
     background-repeat: no-repeat; 
     background-size: 100% 100%; 
     background-position: center;
