--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -18,10 +18,22 @@ body {
 }
 #root{
   width: 100%;
-  justify-content: center;
-  align-items: center;
-  display: flex;
   flex-direction: column;
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+ 
+}
+
+.erdian{
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  height: 100vh; 
+}
+
+.J_evely{
+  
 }
 
 /* src/index.css o src/styles.css */
