--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -32,6 +32,23 @@ body {
   height: 100vh; 
 }
 
+.editar{
+  margin-top: 120px;
+  margin-left: 115px;
+}
+
+.posicion{
+  top:10%;
+  left: 10%;
+}
+
+@media (max-width: 768px) {
+
+  .posicion{
+    top: 5%;
+    left: 5%;
+  }
+}
 
 
 
