--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -71,3 +71,36 @@ body {
 }
 
 
+
+
+@layer utilities {
+  .animate-fadeIn {
+      animation: fadeIn 1s ease-out forwards;
+  }
+
+  .animate-fadeOut {
+      animation: fadeOut 1s ease-in forwards;
+  }
+
+  @keyframes fadeIn {
+      0% {
+          opacity: 0;
+          transform: translateY(-10px);
+      }
+      100% {
+          opacity: 1;
+          transform: translateY(0);
+      }
+  }
+
+  @keyframes fadeOut {
+      0% {
+          opacity: 1;
+          transform: translateY(0);
+      }
+      100% {
+          opacity: 0;
+          transform: translateY(10px);
+      }
+  }
+}
