add: textu guztiak Ubuntu dira

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -15,6 +15,7 @@ body {
   background-color: var(--color-bg);
   transition: background-color 0.3s;
   width: 100%;
+  @apply font-ubuntu;
 }
 #root{
   width: 100%;
