--- a/Frontend/src/components/body/Carousel.css
+++ b/Frontend/src/components/body/Carousel.css
@@ -21,11 +21,11 @@
 /* Contenedor de los elementos del carrusel */
 .carousel-content {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* 3 columnas */
+  grid-template-columns: repeat(3, 1fr); 
   gap: 10px;
-  width: 100%;
-  grid-template-rows: repeat(2, auto); /* 2 filas */
-  transition: transform 0.5s ease-in-out; /* Transición suave */
+  grid-auto-rows: auto; 
+  grid-auto-flow: row dense; 
+  transition: transform 0.5s ease-in-out; 
 }
 
 /* Estilo para cada item del carrusel */
@@ -38,8 +38,8 @@
   box-sizing: border-box;
 }
 
-.carousel-item img {
-  width: 389.86px;
+.carousel-img {
+  width: 463.72px;
   height: 230px;
   border-radius: 8px;
 }
